2013-02-07  Xiaobo Wang  <xbwang@torchmobile.com.cn>

        [BlackBerry] CHHW - Characters that are using 32 bits encoding get trunked to 16bits
        https://bugs.webkit.org/show_bug.cgi?id=109126
        PR 292540

        Reviewed by Yong Li.

        Change char code to 4 bytes.

        * DumpRenderTree/blackberry/EventSender.cpp:
        (keyDownCallback):

2013-02-07  Gavin Peters  <gavinp@chromium.org>

        Unreviewed, rolling out r142090.
        http://trac.webkit.org/changeset/142090
        https://bugs.webkit.org/show_bug.cgi?id=108466

        lots of selection expectations failures

        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp:
        * DumpRenderTree/DumpRenderTree.gypi:
        * DumpRenderTree/chromium/TestRunner/public/WebPreferences.h:
        * DumpRenderTree/chromium/TestRunner/public/WebTask.h:
        (WebTaskList):
        * DumpRenderTree/chromium/TestRunner/public/WebTestCommon.h: Removed.
        * DumpRenderTree/chromium/TestRunner/public/WebTestInterfaces.h:
        (WebTestInterfaces):
        * DumpRenderTree/chromium/TestRunner/public/WebTestProxy.h:
        (WebTestProxyBase):
        * DumpRenderTree/chromium/TestRunner/src/AccessibilityUIElementChromium.cpp:
        (WebTestRunner::AccessibilityUIElement::AccessibilityUIElement):
        (WebTestRunner::AccessibilityUIElementList::getOrCreate):
        (WebTestRunner::AccessibilityUIElementList::createRoot):
        * DumpRenderTree/chromium/TestRunner/src/AccessibilityUIElementChromium.h:
        (AccessibilityUIElementList):
        * DumpRenderTree/chromium/TestRunner/src/CppBoundClass.cpp:
        (WebTestRunner::CppBoundClass::~CppBoundClass):
        (WebTestRunner::CppBoundClass::invoke):
        (WebTestRunner::CppBoundClass::getProperty):
        (WebTestRunner::CppBoundClass::setProperty):
        (WebTestRunner::CppBoundClass::bindCallback):
        (WebTestRunner::CppBoundClass::bindGetterCallback):